# fastapi-clean-architecture

./: .gitignore  config.py  databse.py  main.py  pyproject.toml
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/repository/: user_repo.py
user/interface/controller/: user_controller.py
